# videoMaker

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  sam_segment.py
assets/: v3.json
include/: face_detector.hpp  face_replacer.hpp  segmentation.hpp
include/cuda/: gpu_blend.cuh
src/: face_detector.cpp  face_replacer.cpp  main.cpp  segmentation.cpp
src/cuda/: gpu_blend.cu
temp/: out2.json  track.json  v3.json
